Remover Target Blank

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </p>
     <h4 class="title">Related Content</h4>
     <ul id="list">
-        <li><a href="#" target="_blank">How To Style Boyfriend Jeans</a></li>
-        <li><a href="#" target="_blank">When Print Is Too Much</a></li>
-        <li><a href="#" target="_blank">The Overalls Trend</a></li>
-        <li><a href="#" target="_blank">Fall's It Color: Blush</a></li>
+        <li><a href="#">How To Style Boyfriend Jeans</a></li>
+        <li><a href="#">When Print Is Too Much</a></li>
+        <li><a href="#">The Overalls Trend</a></li>
+        <li><a href="#">Fall's It Color: Blush</a></li>
     </ul>
     <div id="contact">
         <p>
